--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.699.0",
     "@aws-sdk/s3-request-presigner": "^3.699.0",
+    "@google-cloud/storage": "^7.14.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -31,7 +32,7 @@
     "@nestjs/serve-static": "^4.0.2",
     "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
-    "ejs": "^3.1.10",
+    "dotenv": "^16.4.5",
     "mariadb": "^3.3.1",
     "mysql2": "^3.11.0",
     "reflect-metadata": "^0.2.0",
